data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2547.wast
;; 8. **Block with `call_indirect` Using Incorrect Table Index:**    - **Test Description:** Use `call_indirect` within a block to call a function using an incorrect table index, which should trigger an error or fallback mechanism.    - **Constraint Checked:** Validity and handling of indirect table lookups within block context.    - **Relation to Improper Function Handling:** Ensure proper behavior when indirect calls use incorrect table indices within a block environment.

(assert_invalid
  (module
    (table 1 funcref)
    (func $f (param i32) (result i32) (local.get 0))
    (elem (i32.const 0) $f)
    (func (result i32)
      (block (result i32)
        (i32.const 0)
        (call_indirect (type 0) (i32.const 1))
      )
    )
    (type (func (param i32) (result i32)))
  )
  "type mismatch"
)